src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");

* {
  // base styling
  margin: 0;
  padding: 0;
  font-family: "Inter";

  /* Disable the highlight effect on tap */
  -webkit-tap-highlight-color: transparent; /* For Safari and iOS */
  -webkit-touch-callout: none; /* Prevents callout on long press */
  -webkit-user-select: none; /* Prevents text selection on tap */
  user-select: none; /* General selection disabling */
}

:root {
  --background-color: #f5f5f5;
  --text-color: #22252a;
  --board-color: #f5f5f5;
  --cell-border: #22252a;
}

.dark-mode {
  --background-color: #22252a;
  --text-color: #f5f5f5;
  --board-color: #22252a;
  --cell-border: #f5f5f5;
}

body {
  background-color: var(--background-color);
  color: var(--text-color);
  transition: background-color 0.3s, color 0.3s;
}

.icon-container {
  padding: 0.5rem 1rem;
}

a {
  cursor: pointer;
}

@keyframes blink {
  50% {
    visibility: hidden;
  }
}

